refactored and added more RegistrationTests
