# apispec/src/main/resources/openapi-spec.yml
@@ -21,16 +21,16 @@ paths:
         '400':
           description: Bad request.
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '403':
           description: Bad request, the userhandle is not available or not allowed
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
-  
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
     post:
       summary: Store new webauthn-credentials
       requestBody:
@@ -47,9 +47,9 @@ paths:
         '400':
           description: Bad request or the user failed challenge verification.
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /authentication/{user_handle}:
     get:
@@ -72,9 +72,9 @@ paths:
         '404':
           description: No credentials found for the given userhandle.
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
     post:
       summary: Authenticates the user credential sigining request and grants a token.
@@ -103,15 +103,15 @@ paths:
         '404':
           description: No credentials found for the given userhandle.
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /notes:
     get:
       summary: Reads notes of logged in user.
       security:
-       - bearerAuth: []
+        - bearerAuth: [ ]
       tags:
         - NOTES
       responses:
@@ -124,20 +124,20 @@ paths:
         '403':
           description: Not allowed.
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '404':
           description: No notes found.
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
     put:
       summary: Updates notes of logged in user.
       security:
-       - bearerAuth: []
+        - bearerAuth: [ ]
       requestBody:
         required: true
         content:
@@ -152,130 +152,127 @@ paths:
         '404':
           description: No credentials found for the given userhandle.
           content:
-           application/json:
-            schema:
-             $ref: '#/components/schemas/Error'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
- securitySchemes:
-  bearerAuth:
-   type: apiKey
-   name: Authorization
-   in: header
+  securitySchemes:
+    bearerAuth:
+      type: apiKey
+      name: Authorization
+      in: header
   
- schemas:
-  RegistrationRequest:
-   type: object
-   properties:
-      user_handle:
-       type: string
-       description: Server provided user handle
-      client_data_json:
-       type: string
-       description: Base64 encoded String.
-      attestation_object:
-       type: string
-       description: Base64 encoded String.
-      credential_id:
-       type: string
-       description: Base64 encoded String.
- 
-  AuthenticationRequest:
-   type: object
-   properties:
-      authenticator_data:
-       type: string
-       description: Base64 encoded String.
-      client_data_json:
-       type: string
-       description: Base64 encoded String.
-      signature:
-       type: string
-       description: Base64 encoded String.
-  SuccessfulAuthenticationResponse:
-   type: object
-   properties:
-      access_token:
-       type: string
-       description: bearer access token.
-  PublicKeyCredentialCreationOptionsResponse:
-   type: object
-   properties:
-      rp_id:
-       type: string
-       description: relying party to which this credential is tied.     
-      rp_name:
-       type: string
-       description: relying party name to which this credential is tied.     
-      user_id:
-       type: string
-       description: the user identifier or user handle     
-      user_name:
-       type: string
-       description: name of the user.     
-      display_name:
-       type: string
-       description: Name to be shown for this credential to the user.     
-      challenge:
-       type: string
-       description: generated challenge string.    
-      pub_key_cred_params:
-       type: array
-       description: public key credential parameters     
-       items:
-        $ref: '#/components/schemas/PublicKeyCredentialParam'
+  schemas:
+    RegistrationRequest:
+      type: object
+      properties:
+        user_handle:
+          type: string
+          description: Server provided user handle
+        client_data_json:
+          type: string
+          description: Base64 encoded String.
+        attestation_object:
+          type: string
+          description: Base64 encoded String.
 
-  PublicKeyCredentialParam:
-   type: object
-   properties:
-      type:
-       type: string
-       description: type of key. ex. public-key
-      alg:
-       type: number
-       description: algorithm to use.
+    AuthenticationRequest:
+      type: object
+      properties:
+        authenticator_data:
+          type: string
+          description: Base64 encoded String.
+        client_data_json:
+          type: string
+          description: Base64 encoded String.
+        signature:
+          type: string
+          description: Base64 encoded String.
+    SuccessfulAuthenticationResponse:
+      type: object
+      properties:
+        access_token:
+          type: string
+          description: bearer access token.
+    PublicKeyCredentialCreationOptionsResponse:
+      type: object
+      properties:
+        rp_id:
+          type: string
+          description: relying party to which this credential is tied.
+        rp_name:
+          type: string
+          description: relying party name to which this credential is tied.
+        user_id:
+          type: string
+          description: the user identifier or user handle
+        user_name:
+          type: string
+          description: name of the user.
+        display_name:
+          type: string
+          description: Name to be shown for this credential to the user.
+        challenge:
+          type: string
+          description: generated challenge string.
+        pub_key_cred_params:
+          type: array
+          description: public key credential parameters
+          items:
+            $ref: '#/components/schemas/PublicKeyCredentialParam'
 
-  PublicKeyCredentialRequestOptionsResponse:
-   type: object
-   properties:
-      challenge:
-       type: string
-       description: generated challenge string.
-      user_verification:
-       type: string
-       description: user verification type requested.
-      rp_id:
-       type: string
-       description: rpId to which this credential is tied.
-      allowed_credentials:
-       type: array
-       description: allowed credentials available with server to complete this request.
-       items:
-        $ref: '#/components/schemas/AllowedCredential'
-  
-  AllowedCredential:
-   type: object
-   properties:
-    type:
-     type: string
-     description: type of credential.
-    id:
-     type: string
-     description: Base64 encoded credential id.
-  
-  SimpleNote:
-   type: object
-   properties:
-    note:
-     type: string
-     description: A simple note.
-     
-  Error:
-   type: object
-   properties:
-    error:
-     type: string
-     description: name of the error.
-    description:
-     type: string
-     description: defines the reason for this error.     
+    PublicKeyCredentialParam:
+      type: object
+      properties:
+        type:
+          type: string
+          description: type of key. ex. public-key
+        alg:
+          type: number
+          description: algorithm to use.
+
+    PublicKeyCredentialRequestOptionsResponse:
+      type: object
+      properties:
+        challenge:
+          type: string
+          description: generated challenge string.
+        user_verification:
+          type: string
+          description: user verification type requested.
+        rp_id:
+          type: string
+          description: rpId to which this credential is tied.
+        allowed_credentials:
+          type: array
+          description: allowed credentials available with server to complete this request.
+          items:
+            $ref: '#/components/schemas/AllowedCredential'
+
+    AllowedCredential:
+      type: object
+      properties:
+        type:
+          type: string
+          description: type of credential.
+        id:
+          type: string
+          description: Base64 encoded credential id.
+
+    SimpleNote:
+      type: object
+      properties:
+        note:
+          type: string
+          description: A simple note.
+
+    Error:
+      type: object
+      properties:
+        error:
+          type: string
+          description: name of the error.
+        description:
+          type: string
+          description: defines the reason for this error.
